[project]
name = "mkapi_python"
version = "0.1.0"
description = "Python API generator for mkdocs-ts document."
requires-python = "~=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "griffe>=0.45.2,<0.46.0"
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pip-audit",
    "pylint",
    "pycodestyle",
    "pydocstyle",
    "isort",
    "black[d]",
    "mypy",
    "pdoc",
    "build",
    "twine",
]
[build-system]
requires = [
    "setuptools>=67.7.2",
]

[tool.setuptools]
packages = ["mkapi_python"]

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "too-many-locals",
    "exec-used",
    "too-few-public-methods"
]
max-line-length = 120

[tool.mypy]
# ignore_missing_imports = true
